--- a/app/src/main/res/layout/activity_act_home.xml
+++ b/app/src/main/res/layout/activity_act_home.xml
@@ -81,6 +81,17 @@ android:background="#ffffff"
         app:backgroundTint="#d8e1dede"
         app:elevation="10dp"/>
 
+    <TextView
+        android:id="@+id/xml_service_time_ui"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="00:00:00"
+        android:layout_margin="20dp"
+        android:padding="20dp"
+        android:textSize="15dp"/>
+
 
 </RelativeLayout>
 
