--- a/app/src/main/res/layout-hdpi/activity_act_home.xml
+++ b/app/src/main/res/layout-hdpi/activity_act_home.xml
@@ -38,7 +38,7 @@ android:background="#ffffff"
         <RelativeLayout
             android:id="@+id/relativeLayout3"
             android:layout_width="match_parent"
-            android:layout_height="280dp"
+            android:layout_height="200dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/ic_team_svg">
 
@@ -76,11 +76,21 @@ android:background="#ffffff"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="130dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginRight="15dp"
         android:src="@drawable/ic_edit_black_24dp"
         app:backgroundTint="#d8e1dede"
         app:elevation="10dp"/>
+    <TextView
+        android:id="@+id/xml_service_time_ui"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="00:00:00"
+        android:layout_margin="20dp"
+        android:padding="20dp"
+        android:textSize="15dp"/>
 
 
 </RelativeLayout>
