--- a/app/src/main/res/layout-xxhdpi/activity_act_home.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_act_home.xml
@@ -15,7 +15,7 @@ android:background="#ffffff"
         android:layout_height="match_parent"
         android:background="@drawable/ic_bg_corner_main">
         <TextView
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:id="@+id/txt_menu"
             android:layout_width="35dp"
             android:layout_height="35dp"
@@ -26,14 +26,14 @@ android:background="#ffffff"
         <TextView
             android:id="@+id/xml_netwrkIndcate"
             android:drawablePadding="5dp"
-            android:drawableLeft="@drawable/ic_wifi_black_24dp"
+            android:drawableStart="@drawable/ic_wifi_black_24dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-           android:textSize="15dp"
+           android:textSize="15sp"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="No network"/>
+            android:text="@string/no_network"/>
 
         <RelativeLayout
             android:id="@+id/relativeLayout3"
@@ -49,11 +49,10 @@ android:background="#ffffff"
             android:id="@+id/xml_txt_isconn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/relativeLayout3"
             android:layout_marginTop="40dp"
             android:text=""
             android:textColor="@android:color/black"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <Button
             android:layout_marginTop="15dp"
@@ -63,9 +62,9 @@ android:background="#ffffff"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
             android:background="@drawable/bgdesn_buton_curved"
-            android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
+            android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
             android:elevation="10dp"
-            android:text="Start  Service" />
+            android:text="@string/start_service" />
 
     </LinearLayout>
 
@@ -80,6 +79,17 @@ android:background="#ffffff"
         android:src="@drawable/ic_edit_black_24dp"
         app:backgroundTint="#d8e1dede"
         app:elevation="10dp"/>
+
+    <TextView
+        android:id="@+id/xml_service_time_ui"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="00:00:00"
+        android:layout_margin="20dp"
+        android:padding="20dp"
+        android:textSize="15dp"/>
 
 
 </RelativeLayout>
