Background Service notifi button update/on BrodcastRCVR

--- a/app/src/main/res/layout/activity_act_home.xml
+++ b/app/src/main/res/layout/activity_act_home.xml
@@ -60,6 +60,7 @@ android:background="#ffffff"
             android:id="@+id/xml_service_id"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:textColor="@android:color/white"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="60dp"
             android:background="@drawable/bgdesn_buton_curved"
@@ -82,6 +83,7 @@ android:background="#ffffff"
         app:elevation="10dp"/>
 
     <TextView
+        android:elevation="10dp"
         android:id="@+id/xml_service_time_ui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
