--- a/app/src/main/res/layout-xhdpi/activity_act_home.xml
+++ b/app/src/main/res/layout-xhdpi/activity_act_home.xml
@@ -56,6 +56,7 @@ android:background="#ffffff"
             android:textSize="20dp" />
 
         <Button
+            android:textColor="@android:color/white"
             android:layout_marginTop="10dp"
             android:id="@+id/xml_service_id"
             android:layout_width="match_parent"
@@ -83,6 +84,7 @@ android:background="#ffffff"
         app:elevation="10dp"/>
 
     <TextView
+        android:elevation="10dp"
         android:id="@+id/xml_service_time_ui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
