--- a/app/src/main/res/layout-xxhdpi/activity_act_home.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_act_home.xml
@@ -55,6 +55,7 @@ android:background="#ffffff"
             android:textSize="20sp" />
 
         <Button
+            android:textColor="@android:color/white"
             android:layout_marginTop="15dp"
             android:id="@+id/xml_service_id"
             android:layout_width="match_parent"
@@ -81,6 +82,7 @@ android:background="#ffffff"
         app:elevation="10dp"/>
 
     <TextView
+        android:elevation="10dp"
         android:id="@+id/xml_service_time_ui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
